--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,15 @@ body {
 }
 
 h1 {
+    font-size: 2em;
     font-weight: 700;
     margin: 0em;
     text-align: center;
 }
 
 main {
-    font-size: .9em;
-    padding: 0 15%;
+    font-size: 1em;
+    padding: 0 3%;
     margin: .5em 0;
 }
 
@@ -69,8 +70,14 @@ a {
 
 /*tablet query*/
 @media only screen and (min-width: 768px) {
+
+    h1 {
+        font-size: 2.25em;
+    }
+
     main {
-        font-size: 1em;
+        font-size: 1.25em;
+        padding: 0 8%;
     }
 
     .pace-area {
@@ -91,8 +98,14 @@ a {
 
 /*desktop query*/
 @media only screen and (min-width: 992px) {
+
+    h1 {
+        font-size: 2.75em;
+    }
+
     main {
-        font-size: 1.1em;
+        font-size: 1.5em;
+        padding: 0 12%;
     }
 
     footer {
