--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ main {
     resize: none;
 }
 
+
 textarea {
     outline: none !important;
     border: 2px solid #58473a;
@@ -50,6 +51,42 @@ textarea:focus {
 #pace-results {
     padding: 0;
     margin: 0;
+}
+
+.baseball {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.baseball-inner {
+    display: flex;
+}
+
+.baseball-inner>p {
+    padding: 2px;
+    margin: 5px;
+}
+
+button {
+    background-color: #58473a;
+    color: #FFFBE9;
+    width: 100px;
+    height: 30px;
+    padding: 1px;
+    font-size: .8em;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#stat-input-area,
+#games-input-area {
+    width: 6em;
+    height: 1.3em;
+    font-size: 1.5em;
+    padding: 0;
+    margin: 0;
+    resize: none;
 }
 
 footer {
