--- a/css/styles.css
+++ b/css/styles.css
@@ -52,10 +52,22 @@ textarea:focus {
     margin: 0;
 }
 
+
+h2 {
+    font-size: 1.5em;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+    text-align: center;
+    text-shadow: 0 0 5px #58473a;
+}
 .baseball {
     display: flex;
     flex-direction: column;
     gap: 0;
+    padding: 3px;
+    margin: 5px;
+    border: solid 1px #58473a;
+    border-radius: 5px;
 }
 
 .baseball-inner {
@@ -80,7 +92,7 @@ button {
 
 .or-area {
     padding: 0;
-    margin: 0;
+    margin: 0 0 0 7px;
 }
 
 #stat-input-area,
