--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
     right: 5px;
     width: fit-content;
     height: fit-content;
+    font-size: 10px;
     padding: 3px;
 }
 
@@ -150,6 +151,10 @@ a {
 /*tablet query*/
 @media only screen and (min-width: 768px) {
 
+    #baseball-button {
+        font-size: 12px;
+    }
+
     h1 {
         font-size: 2.25em;
     }
@@ -177,6 +182,10 @@ a {
 
 /*desktop query*/
 @media only screen and (min-width: 992px) {
+
+    #baseball-button {
+        font-size: 14px;
+    }
 
     h1 {
         font-size: 2.75em;
